After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696532 - Renaming with hangul input source -> IBUS-CRITICAL message
Renaming with hangul input source -> IBUS-CRITICAL message
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-25 05:56 UTC by sangu
Modified: 2013-03-25 17:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
eel-editable-label: Fix string length on retrieve-surrounding handler (806 bytes, patch)
2013-03-25 14:35 UTC, Rui Matos
committed Details | Review

Description sangu 2013-03-25 05:56:02 UTC
$ nautilus
(nautilus:3925): IBUS-CRITICAL **: ibus_im_context_set_surrounding: assertion `strlen (text) >= len' failed

(nautilus:3925): IBUS-CRITICAL **: ibus_im_context_set_surrounding: assertion `strlen (text) >= len' failed

1. Launch nautilus
2. Click a file or a folder
3. Click F2
4. Switch hangul input source
5. Input hangul

ibus-1.5.1-3.fc19.x86_64
ibus-hangul-1.4.2-1.fc19.x86_64
nautilus-3.7.92-1.fc19.x86_64
Comment 1 Rui Matos 2013-03-25 14:35:20 UTC
Created attachment 239768 [details] [review]
eel-editable-label: Fix string length on retrieve-surrounding handler

--

Just a small thinko, this fixes it.
Comment 2 Cosimo Cecchi 2013-03-25 14:37:13 UTC
Review of attachment 239768 [details] [review]:

Looks good, thanks.
Comment 3 Cosimo Cecchi 2013-03-25 17:31:49 UTC
Attachment 239768 [details] pushed as 670875d - eel-editable-label: Fix string length on retrieve-surrounding handler