eel-editable-label: Fix string length on retrieve-surrounding handler

https://bugzilla.gnome.org/show_bug.cgi?id=696532